seperated cards for add and delete to avoid overlap

--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -35,7 +35,7 @@
     padding: 0 1rem;
   }
 
-  .card-btn {
+  .add-btn {
     padding: 1rem;
     font-family: inherit;
     font-weight: bold;
@@ -48,4 +48,68 @@
     transition: background 200ms ease-in, color 200ms ease-in;
     cursor: pointer;
 }
+
+.delete-btn {
+    padding: 1rem;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 1rem;
+    border: 2px solid  #4da598;
+    background: transparent;
+    color:  #4da598;
+    border-radius: 0.2rem;
+    transition: background 200ms ease-in, color 200ms ease-in;
+    cursor: pointer;
+}
+
+.addpat-btn {
+    padding: 1rem;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 1rem;
+    border: 2px solid  #4da598;
+    background: transparent;
+    color:  #4da598;
+    border-radius: 0.2rem;
+    transition: background 200ms ease-in, color 200ms ease-in;
+    cursor: pointer;
+}
+
+.deletepat-btn {
+    padding: 1rem;
+    font-family: inherit;
+    font-weight: bold;
+    font-size: 1rem;
+    margin: 1rem;
+    border: 2px solid  #4da598;
+    background: transparent;
+    color:  #4da598;
+    border-radius: 0.2rem;
+    transition: background 200ms ease-in, color 200ms ease-in;
+    cursor: pointer;
+}
+
+  :hover .add-btn {
+    background: #4da598;
+    color: white;
+  }
+
+  
+  :hover .delete-btn {
+    background: #4da598;
+    color: white;
+  }
+
+  :hover .addpat-btn {
+    background: #4da598;
+    color: white;
+  }
+
+  :hover .deletepat-btn {
+    background: #4da598;
+    color: white;
+  }
+ 
  
